@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,9 +14,11 @@ package org.openhab.binding.fsinternetradio.test;
 
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 
 import javax.servlet.ServletException;
@@ -24,14 +26,13 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jetty.http.HttpStatus;
 import org.openhab.binding.fsinternetradio.internal.radio.FrontierSiliconRadioConstants;
 
 /**
  * Radio service mock.
  *
- * @author Markus Rathgeb - Migrated from Groovy to pure Java, made more robust
+ * @author Markus Rathgeb - Initial contribution
  * @author Velin Yordanov - Small adjustments
  */
 public class RadioServiceDummy extends HttpServlet {
@@ -49,7 +50,6 @@ public class RadioServiceDummy extends HttpServlet {
     private static final String REQUEST_GET_VOLUME = "/" + FrontierSiliconRadioConstants.REQUEST_GET_VOLUME;
     private static final String REQUEST_SET_MUTE = "/" + FrontierSiliconRadioConstants.REQUEST_SET_MUTE;
     private static final String REQUEST_GET_MUTE = "/" + FrontierSiliconRadioConstants.REQUEST_GET_MUTE;
-    private static final String REQUEST_SET_PRESET = "/" + FrontierSiliconRadioConstants.REQUEST_SET_PRESET;
     private static final String REQUEST_SET_PRESET_ACTION = "/"
             + FrontierSiliconRadioConstants.REQUEST_SET_PRESET_ACTION;
     private static final String REQUEST_GET_PLAY_INFO_TEXT = "/"
@@ -70,26 +70,26 @@ public class RadioServiceDummy extends HttpServlet {
 
     private final int httpStatus;
 
-    private String tagToReturn;
-    private String responseToReturn;
+    private String tagToReturn = "";
+    private String responseToReturn = "";
 
     private boolean isInvalidResponseExpected;
     private boolean isInvalidValueExpected;
     private boolean isOKAnswerExpected = true;
 
     private String powerValue;
-    private String powerTag;
+    private String powerTag = "";
 
     private String muteValue;
-    private String muteTag;
+    private String muteTag = "";
 
     private String absoluteVolumeValue;
-    private String absoluteVolumeTag;
+    private String absoluteVolumeTag = "";
 
     private String modeValue;
-    private String modeTag;
+    private String modeTag = "";
 
-    private String radioStation;
+    private String radioStation = "";
 
     public RadioServiceDummy() {
         this.httpStatus = HttpStatus.OK_200;
@@ -135,7 +135,7 @@ public class RadioServiceDummy extends HttpServlet {
         Collection<String> requestParameterNames = Collections.list(request.getParameterNames());
         if (queryString != null && requestParameterNames.contains(VALUE)) {
             StringBuffer fullUrl = request.getRequestURL().append("?").append(queryString);
-            int value = Integer.parseInt(request.getParameter(VALUE));
+            int value = Integer.parseInt(Objects.requireNonNullElse(request.getParameter(VALUE), ""));
             requestParameters.put(value, fullUrl.toString());
         }
 
@@ -239,11 +239,11 @@ public class RadioServiceDummy extends HttpServlet {
     }
 
     private String makeValidXMLResponse() throws IOException {
-        return IOUtils.toString(getClass().getResourceAsStream("/validXml.xml"));
+        return new String(getClass().getResourceAsStream("/validXml.xml").readAllBytes(), StandardCharsets.UTF_8);
     }
 
     private String makeInvalidXMLResponse() throws IOException {
-        return IOUtils.toString(getClass().getResourceAsStream("/invalidXml.xml"));
+        return new String(getClass().getResourceAsStream("/invalidXml.xml").readAllBytes(), StandardCharsets.UTF_8);
     }
 
     public void setInvalidResponse(boolean value) {
