@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -28,34 +28,35 @@ import java.util.Set;
 import org.apache.commons.lang.ObjectUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.WordUtils;
-import org.eclipse.smarthome.config.core.ConfigDescription;
-import org.eclipse.smarthome.config.core.ConfigDescriptionParameter;
-import org.eclipse.smarthome.config.core.ConfigDescriptionParameterBuilder;
-import org.eclipse.smarthome.config.core.ConfigDescriptionParameterGroup;
-import org.eclipse.smarthome.config.core.ParameterOption;
-import org.eclipse.smarthome.core.thing.DefaultSystemChannelTypeProvider;
-import org.eclipse.smarthome.core.thing.Thing;
-import org.eclipse.smarthome.core.thing.ThingTypeUID;
-import org.eclipse.smarthome.core.thing.type.ChannelDefinition;
-import org.eclipse.smarthome.core.thing.type.ChannelDefinitionBuilder;
-import org.eclipse.smarthome.core.thing.type.ChannelGroupDefinition;
-import org.eclipse.smarthome.core.thing.type.ChannelGroupType;
-import org.eclipse.smarthome.core.thing.type.ChannelGroupTypeBuilder;
-import org.eclipse.smarthome.core.thing.type.ChannelGroupTypeUID;
-import org.eclipse.smarthome.core.thing.type.ChannelKind;
-import org.eclipse.smarthome.core.thing.type.ChannelType;
-import org.eclipse.smarthome.core.thing.type.ChannelTypeUID;
-import org.eclipse.smarthome.core.thing.type.ThingType;
-import org.eclipse.smarthome.core.thing.type.ThingTypeBuilder;
-import org.eclipse.smarthome.core.types.EventDescription;
-import org.eclipse.smarthome.core.types.EventOption;
-import org.eclipse.smarthome.core.types.StateDescription;
-import org.eclipse.smarthome.core.types.StateOption;
 import org.openhab.binding.homematic.internal.model.HmChannel;
 import org.openhab.binding.homematic.internal.model.HmDatapoint;
 import org.openhab.binding.homematic.internal.model.HmDevice;
 import org.openhab.binding.homematic.internal.model.HmParamsetType;
 import org.openhab.binding.homematic.internal.type.MetadataUtils.OptionsBuilder;
+import org.openhab.core.config.core.ConfigDescriptionBuilder;
+import org.openhab.core.config.core.ConfigDescriptionParameter;
+import org.openhab.core.config.core.ConfigDescriptionParameterBuilder;
+import org.openhab.core.config.core.ConfigDescriptionParameterGroup;
+import org.openhab.core.config.core.ConfigDescriptionParameterGroupBuilder;
+import org.openhab.core.config.core.ParameterOption;
+import org.openhab.core.thing.DefaultSystemChannelTypeProvider;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.type.ChannelDefinition;
+import org.openhab.core.thing.type.ChannelDefinitionBuilder;
+import org.openhab.core.thing.type.ChannelGroupDefinition;
+import org.openhab.core.thing.type.ChannelGroupType;
+import org.openhab.core.thing.type.ChannelGroupTypeBuilder;
+import org.openhab.core.thing.type.ChannelGroupTypeUID;
+import org.openhab.core.thing.type.ChannelType;
+import org.openhab.core.thing.type.ChannelTypeBuilder;
+import org.openhab.core.thing.type.ChannelTypeUID;
+import org.openhab.core.thing.type.ThingType;
+import org.openhab.core.thing.type.ThingTypeBuilder;
+import org.openhab.core.types.EventDescription;
+import org.openhab.core.types.EventOption;
+import org.openhab.core.types.StateDescriptionFragmentBuilder;
+import org.openhab.core.types.StateOption;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
@@ -67,7 +68,7 @@ import org.slf4j.LoggerFactory;
  *
  * @author Gerhard Riegler - Initial contribution
  */
-@Component(immediate = true)
+@Component
 public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
     private final Logger logger = LoggerFactory.getLogger(HomematicTypeGeneratorImpl.class);
     private static URI configDescriptionUriChannel;
@@ -76,10 +77,7 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
     private HomematicChannelTypeProvider channelTypeProvider;
     private HomematicChannelGroupTypeProvider channelGroupTypeProvider;
     private HomematicConfigDescriptionProvider configDescriptionProvider;
-    private final Map<String, Set<String>> firmwaresByType = new HashMap<String, Set<String>>();
-
-    private static final String[] STATUS_DATAPOINT_NAMES = new String[] { DATAPOINT_NAME_UNREACH,
-            DATAPOINT_NAME_CONFIG_PENDING, DATAPOINT_NAME_DEVICE_IN_BOOTLOADER, DATAPOINT_NAME_UPDATE_PENDING };
+    private final Map<String, Set<String>> firmwaresByType = new HashMap<>();
 
     private static final String[] IGNORE_DATAPOINT_NAMES = new String[] { DATAPOINT_NAME_AES_KEY,
             VIRTUAL_DATAPOINT_NAME_RELOAD_FROM_GATEWAY };
@@ -145,9 +143,9 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                 logger.debug("Generating ThingType for device '{}' with {} datapoints", device.getType(),
                         device.getDatapointCount());
 
-                List<ChannelGroupType> groupTypes = new ArrayList<ChannelGroupType>();
+                List<ChannelGroupType> groupTypes = new ArrayList<>();
                 for (HmChannel channel : device.getChannels()) {
-                    List<ChannelDefinition> channelDefinitions = new ArrayList<ChannelDefinition>();
+                    List<ChannelDefinition> channelDefinitions = new ArrayList<>();
                     // Omit thing channel definitions for reconfigurable channels;
                     // those will be populated dynamically during thing initialization
                     if (!channel.isReconfigurable()) {
@@ -210,7 +208,7 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                 && !DEVICE_TYPE_VIRTUAL_WIRED.equals(device.getType())) {
             Set<String> firmwares = firmwaresByType.get(device.getType());
             if (firmwares == null) {
-                firmwares = new HashSet<String>();
+                firmwares = new HashSet<>();
                 firmwaresByType.put(device.getType(), firmwares);
             }
             firmwares.add(device.getFirmware());
@@ -224,11 +222,11 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
         String label = MetadataUtils.getDeviceName(device);
         String description = String.format("%s (%s)", label, device.getType());
 
-        List<String> supportedBridgeTypeUids = new ArrayList<String>();
+        List<String> supportedBridgeTypeUids = new ArrayList<>();
         supportedBridgeTypeUids.add(THING_TYPE_BRIDGE.toString());
         ThingTypeUID thingTypeUID = UidUtils.generateThingTypeUID(device);
 
-        Map<String, String> properties = new HashMap<String, String>();
+        Map<String, String> properties = new HashMap<>();
         properties.put(Thing.PROPERTY_VENDOR, PROPERTY_VENDOR_NAME);
         properties.put(Thing.PROPERTY_MODEL_ID, device.getType());
 
@@ -237,7 +235,7 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
             generateConfigDescription(device, configDescriptionURI);
         }
 
-        List<ChannelGroupDefinition> groupDefinitions = new ArrayList<ChannelGroupDefinition>();
+        List<ChannelGroupDefinition> groupDefinitions = new ArrayList<>();
         for (ChannelGroupType groupType : groupTypes) {
             String id = StringUtils.substringAfterLast(groupType.getUID().getId(), "_");
             groupDefinitions.add(new ChannelGroupDefinition(id, groupType.getUID()));
@@ -276,27 +274,34 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                 });
             }
 
-            StateDescription state = null;
+            StateDescriptionFragmentBuilder stateFragment = StateDescriptionFragmentBuilder.create();
             if (dp.isNumberType()) {
                 BigDecimal min = MetadataUtils.createBigDecimal(dp.getMinValue());
                 BigDecimal max = MetadataUtils.createBigDecimal(dp.getMaxValue());
-
                 BigDecimal step = MetadataUtils.createBigDecimal(dp.getStep());
-                if (step == null) {
-                    step = MetadataUtils.createBigDecimal(dp.isFloatType() ? new Float(0.1) : 1L);
+                if (ITEM_TYPE_DIMMER.equals(itemType) && dp.getMaxValue().doubleValue() == 1.01d) {
+                    // For dimmers with a max value of 1.01 the values must be corrected
+                    min = MetadataUtils.createBigDecimal(0);
+                    max = MetadataUtils.createBigDecimal(100);
+                    step = MetadataUtils.createBigDecimal(1);
+                } else {
+                    if (step == null) {
+                        step = MetadataUtils
+                                .createBigDecimal(dp.isFloatType() ? Float.valueOf(0.1f) : Long.valueOf(1L));
+                    }
                 }
-                state = new StateDescription(min, max, step, MetadataUtils.getStatePattern(dp), dp.isReadOnly(),
-                        options);
+                stateFragment.withMinimum(min).withMaximum(max).withStep(step)
+                        .withPattern(MetadataUtils.getStatePattern(dp)).withReadOnly(dp.isReadOnly());
             } else {
-                state = new StateDescription(null, null, null, MetadataUtils.getStatePattern(dp), dp.isReadOnly(),
-                        options);
+                stateFragment.withPattern(MetadataUtils.getStatePattern(dp)).withReadOnly(dp.isReadOnly());
+            }
+            if (options != null) {
+                stateFragment.withOptions(options);
             }
 
-            ChannelKind channelKind = ChannelKind.STATE;
+            ChannelTypeBuilder channelTypeBuilder;
             EventDescription eventDescription = null;
             if (dp.isTrigger()) {
-                itemType = null;
-                channelKind = ChannelKind.TRIGGER;
                 eventDescription = new EventDescription(
                         MetadataUtils.generateOptions(dp, new OptionsBuilder<EventOption>() {
                             @Override
@@ -304,23 +309,26 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                                 return new EventOption(value, description);
                             }
                         }));
-
+                channelTypeBuilder = ChannelTypeBuilder.trigger(channelTypeUID, label)
+                        .withEventDescription(eventDescription);
+            } else {
+                channelTypeBuilder = ChannelTypeBuilder.state(channelTypeUID, label, itemType)
+                        .withStateDescriptionFragment(stateFragment.build());
             }
-            channelType = new ChannelType(channelTypeUID, !MetadataUtils.isStandard(dp), itemType, channelKind, label,
-                    description, category, null, state, eventDescription, configDescriptionUriChannel);
-
+            channelType = channelTypeBuilder.isAdvanced(!MetadataUtils.isStandard(dp)).withDescription(description)
+                    .withCategory(category).withConfigDescriptionURI(configDescriptionUriChannel).build();
         }
         return channelType;
     }
 
     private void generateConfigDescription(HmDevice device, URI configDescriptionURI) {
-        List<ConfigDescriptionParameter> parms = new ArrayList<ConfigDescriptionParameter>();
-        List<ConfigDescriptionParameterGroup> groups = new ArrayList<ConfigDescriptionParameterGroup>();
+        List<ConfigDescriptionParameter> parms = new ArrayList<>();
+        List<ConfigDescriptionParameterGroup> groups = new ArrayList<>();
 
         for (HmChannel channel : device.getChannels()) {
             String groupName = "HMG_" + channel.getNumber();
             String groupLabel = MetadataUtils.getDescription("CHANNEL_NAME") + " " + channel.getNumber();
-            groups.add(new ConfigDescriptionParameterGroup(groupName, null, false, groupLabel, null));
+            groups.add(ConfigDescriptionParameterGroupBuilder.create(groupName).withLabel(groupLabel).build());
 
             for (HmDatapoint dp : channel.getDatapoints()) {
                 if (dp.getParamsetType() == HmParamsetType.MASTER) {
@@ -346,7 +354,8 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                     if (dp.isNumberType()) {
                         builder.withMinimum(MetadataUtils.createBigDecimal(dp.getMinValue()));
                         builder.withMaximum(MetadataUtils.createBigDecimal(dp.getMaxValue()));
-                        builder.withStepSize(MetadataUtils.createBigDecimal(dp.isFloatType() ? new Float(0.1) : 1L));
+                        builder.withStepSize(MetadataUtils
+                                .createBigDecimal(dp.isFloatType() ? Float.valueOf(0.1f) : Long.valueOf(1L)));
                         builder.withUnitLabel(MetadataUtils.getUnit(dp));
                     }
 
@@ -355,9 +364,8 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
                 }
             }
         }
-
-        configDescriptionProvider.addConfigDescription(new ConfigDescription(configDescriptionURI, parms, groups));
-
+        configDescriptionProvider.addConfigDescription(ConfigDescriptionBuilder.create(configDescriptionURI)
+                .withParameters(parms).withParameterGroups(groups).build());
     }
 
     private URI getConfigDescriptionURI(HmDevice device) {
@@ -376,5 +384,4 @@ public class HomematicTypeGeneratorImpl implements HomematicTypeGenerator {
     public static boolean isIgnoredDatapoint(HmDatapoint dp) {
         return StringUtils.indexOfAny(dp.getName(), IGNORE_DATAPOINT_NAMES) != -1;
     }
-
 }
