@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,16 +17,19 @@ import static org.openhab.binding.lutron.internal.LutronBindingConstants.*;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.eclipse.smarthome.core.library.types.DecimalType;
-import org.eclipse.smarthome.core.library.types.OnOffType;
-import org.eclipse.smarthome.core.thing.Bridge;
-import org.eclipse.smarthome.core.thing.ChannelUID;
-import org.eclipse.smarthome.core.thing.Thing;
-import org.eclipse.smarthome.core.thing.ThingStatus;
-import org.eclipse.smarthome.core.thing.ThingStatusDetail;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.RefreshType;
-import org.openhab.binding.lutron.internal.protocol.LutronCommandType;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.lutron.internal.protocol.ModeCommand;
+import org.openhab.binding.lutron.internal.protocol.lip.LutronCommandType;
+import org.openhab.core.library.types.DecimalType;
+import org.openhab.core.library.types.OnOffType;
+import org.openhab.core.thing.Bridge;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.RefreshType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -35,9 +38,9 @@ import org.slf4j.LoggerFactory;
  *
  * @author Bob Adair - Initial contribution
  */
+@NonNullByDefault
 public class GreenModeHandler extends LutronHandler {
-    private static final Integer ACTION_STEP = 1;
-    public static final int GREENSTEP_MIN = 1;
+    private static final int GREENSTEP_MIN = 1;
 
     // poll interval parameters are in minutes
     private static final int POLL_INTERVAL_DEFAULT = 15;
@@ -48,7 +51,7 @@ public class GreenModeHandler extends LutronHandler {
 
     private int integrationId;
     private int pollInterval;
-    private ScheduledFuture<?> pollJob;
+    private @Nullable ScheduledFuture<?> pollJob;
 
     public GreenModeHandler(Thing thing) {
         super(thing);
@@ -91,7 +94,8 @@ public class GreenModeHandler extends LutronHandler {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "No bridge configured");
         } else if (bridge.getStatus() == ThingStatus.ONLINE) {
             updateStatus(ThingStatus.UNKNOWN, ThingStatusDetail.NONE, "Awaiting initial response");
-            queryGreenMode(ACTION_STEP); // handleUpdate() will set thing status to online when response arrives
+            queryGreenMode(ModeCommand.ACTION_STEP);
+            // handleUpdate() will set thing status to online when response arrives
         } else {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.BRIDGE_OFFLINE);
         }
@@ -110,22 +114,23 @@ public class GreenModeHandler extends LutronHandler {
     }
 
     private void stopPolling() {
+        ScheduledFuture<?> pollJob = this.pollJob;
         if (pollJob != null) {
+            this.pollJob = null;
             logger.debug("Canceling green mode polling job for integration ID {}", integrationId);
             pollJob.cancel(true);
-            pollJob = null;
         }
     }
 
     private synchronized void pollState() {
         logger.trace("Executing green mode polling job for integration ID {}", integrationId);
-        queryGreenMode(ACTION_STEP);
+        queryGreenMode(ModeCommand.ACTION_STEP);
     }
 
     @Override
     public void channelLinked(ChannelUID channelUID) {
         if (channelUID.getId().equals(CHANNEL_STEP)) {
-            queryGreenMode(ACTION_STEP);
+            queryGreenMode(ModeCommand.ACTION_STEP);
         }
     }
 
@@ -133,16 +138,16 @@ public class GreenModeHandler extends LutronHandler {
     public void handleCommand(ChannelUID channelUID, Command command) {
         if (channelUID.getId().equals(CHANNEL_STEP)) {
             if (command == OnOffType.ON) {
-                greenMode(ACTION_STEP, 2);
+                greenMode(ModeCommand.ACTION_STEP, 2);
             } else if (command == OnOffType.OFF) {
-                greenMode(ACTION_STEP, 1);
+                greenMode(ModeCommand.ACTION_STEP, 1);
             } else if (command instanceof Number) {
-                Integer step = new Integer(((Number) command).intValue());
+                Integer step = ((Number) command).intValue();
                 if (step.intValue() >= GREENSTEP_MIN) {
-                    greenMode(ACTION_STEP, step);
+                    greenMode(ModeCommand.ACTION_STEP, step);
                 }
             } else if (command instanceof RefreshType) {
-                queryGreenMode(ACTION_STEP);
+                queryGreenMode(ModeCommand.ACTION_STEP);
             } else {
                 logger.debug("Ignoring invalid command {} for id {}", command, integrationId);
             }
@@ -155,8 +160,8 @@ public class GreenModeHandler extends LutronHandler {
     public void handleUpdate(LutronCommandType type, String... parameters) {
         try {
             if (type == LutronCommandType.MODE && parameters.length > 1
-                    && ACTION_STEP.toString().equals(parameters[0])) {
-                Long step = new Long(parameters[1]);
+                    && ModeCommand.ACTION_STEP.toString().equals(parameters[0])) {
+                Long step = Long.valueOf(parameters[1]);
                 if (getThing().getStatus() == ThingStatus.UNKNOWN) {
                     updateStatus(ThingStatus.ONLINE);
                     startPolling();
