@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,10 +12,9 @@
  */
 package org.openhab.binding.yamahareceiver.internal;
 
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 
 /**
  * Helper for loading XML files from classpath.
@@ -29,12 +28,11 @@ public class ResponseLoader {
             if (in == null) {
                 return null;
             }
-            return IOUtils.toString(in);
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
         }
     }
 
     public String load(String path, String model) throws IOException {
         return load(String.format("/%s/%s", model, path));
     }
-
 }
