@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,8 +13,13 @@
 package org.openhab.persistence.mapdb.internal;
 
 import java.io.File;
-import java.util.Collections;
+import java.io.IOException;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Instant;
 import java.util.Date;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
@@ -25,19 +30,22 @@ import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.eclipse.smarthome.config.core.ConfigConstants;
-import org.eclipse.smarthome.core.common.ThreadPoolManager;
-import org.eclipse.smarthome.core.items.Item;
-import org.eclipse.smarthome.core.persistence.FilterCriteria;
-import org.eclipse.smarthome.core.persistence.HistoricItem;
-import org.eclipse.smarthome.core.persistence.PersistenceItemInfo;
-import org.eclipse.smarthome.core.persistence.PersistenceService;
-import org.eclipse.smarthome.core.persistence.QueryablePersistenceService;
-import org.eclipse.smarthome.core.types.State;
-import org.eclipse.smarthome.core.types.UnDefType;
 import org.mapdb.DB;
 import org.mapdb.DBMaker;
+import org.openhab.core.OpenHAB;
+import org.openhab.core.common.ThreadPoolManager;
+import org.openhab.core.items.Item;
+import org.openhab.core.persistence.FilterCriteria;
+import org.openhab.core.persistence.HistoricItem;
+import org.openhab.core.persistence.PersistenceItemInfo;
+import org.openhab.core.persistence.PersistenceService;
+import org.openhab.core.persistence.QueryablePersistenceService;
+import org.openhab.core.persistence.strategy.PersistenceStrategy;
+import org.openhab.core.types.State;
+import org.openhab.core.types.UnDefType;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Deactivate;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -45,82 +53,113 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
 /**
- * This is the implementation of the MapDB {@link PersistenceService}. To learn
- * more about MapDB please visit their <a
- * href="http://www.mapdb.org/">website</a>.
+ * This is the implementation of the MapDB {@link PersistenceService}. To learn more about MapDB please visit their
+ * <a href="http://www.mapdb.org/">website</a>.
  *
  * @author Jens Viebig - Initial contribution
- * @author Martin Kühl - Port to Eclipse SmartHome
+ * @author Martin Kühl - Port to 3.x
  */
 @NonNullByDefault
 @Component(service = { PersistenceService.class, QueryablePersistenceService.class })
 public class MapDbPersistenceService implements QueryablePersistenceService {
 
-    private static final String SERVICE_NAME = "mapdb";
-
-    private static final String DB_FOLDER_NAME = ConfigConstants.getUserDataFolder() + File.separator + "persistence" + File.separator + "mapdb";
-
+    private static final String SERVICE_ID = "mapdb";
+    private static final String SERVICE_LABEL = "MapDB";
+    private static final Path DB_DIR = new File(OpenHAB.getUserDataFolder(), "persistence").toPath().resolve("mapdb");
+    private static final Path BACKUP_DIR = DB_DIR.resolve("backup");
     private static final String DB_FILE_NAME = "storage.mapdb";
 
     private final Logger logger = LoggerFactory.getLogger(MapDbPersistenceService.class);
 
-    @NonNullByDefault({})
-    private ExecutorService threadPool;
+    private final ExecutorService threadPool = ThreadPoolManager.getPool(getClass().getSimpleName());
 
     /** holds the local instance of the MapDB database */
-    @NonNullByDefault({})
-    private DB db;
-    @NonNullByDefault({})
-    private Map<String, String> map;
 
-    private transient Gson mapper = new GsonBuilder()
-            .registerTypeHierarchyAdapter(State.class, new StateTypeAdapter())
+    private @NonNullByDefault({}) DB db;
+    private @NonNullByDefault({}) Map<String, String> map;
+
+    private transient Gson mapper = new GsonBuilder().registerTypeHierarchyAdapter(State.class, new StateTypeAdapter())
             .create();
 
+    @Activate
     public void activate() {
         logger.debug("MapDB persistence service is being activated");
 
-        threadPool = ThreadPoolManager.getPool(getClass().getSimpleName());
-
-        File folder = new File(DB_FOLDER_NAME);
-        if (!folder.exists()) {
-            if (!folder.mkdirs()) {
-                logger.warn("Failed to create one or more directories in the path '{}'", DB_FOLDER_NAME);
-                logger.warn("MapDB persistence service activation has failed.");
-                return;
-            }
+        try {
+            Files.createDirectories(DB_DIR);
+        } catch (IOException e) {
+            logger.warn("Failed to create one or more directories in the path '{}'", DB_DIR);
+            logger.warn("MapDB persistence service activation has failed.");
+            return;
         }
 
-        File dbFile = new File(DB_FOLDER_NAME, DB_FILE_NAME);
-        db = DBMaker.newFileDB(dbFile).closeOnJvmShutdown().make();
-        map = db.createTreeMap("itemStore").makeOrGet();
+        File dbFile = DB_DIR.resolve(DB_FILE_NAME).toFile();
+        try {
+            db = DBMaker.newFileDB(dbFile).closeOnJvmShutdown().make();
+            map = db.createTreeMap("itemStore").makeOrGet();
+        } catch (RuntimeException re) {
+            Throwable cause = re.getCause();
+            if (cause instanceof ClassNotFoundException) {
+                ClassNotFoundException cnf = (ClassNotFoundException) cause;
+                logger.warn(
+                        "The MapDB in {} is incompatible with openHAB {}: {}. A new and empty MapDB will be used instead.",
+                        dbFile, OpenHAB.getVersion(), cnf.getMessage());
+
+                try {
+                    Files.createDirectories(BACKUP_DIR);
+                } catch (IOException ioe) {
+                    logger.warn("Failed to create one or more directories in the path '{}'", BACKUP_DIR);
+                    logger.warn("MapDB persistence service activation has failed.");
+                    return;
+                }
+
+                try (DirectoryStream<Path> stream = Files.newDirectoryStream(DB_DIR)) {
+                    long epochMilli = Instant.now().toEpochMilli();
+                    for (Path path : stream) {
+                        if (!Files.isDirectory(path)) {
+                            Path newPath = BACKUP_DIR.resolve(epochMilli + "--" + path.getFileName());
+                            Files.move(path, newPath);
+                            logger.info("Moved incompatible MapDB file '{}' to '{}'", path, newPath);
+                        }
+                    }
+                } catch (IOException ioe) {
+                    logger.warn("Failed to read files from '{}': {}", DB_DIR, ioe.getMessage());
+                    logger.warn("MapDB persistence service activation has failed.");
+                    return;
+                }
+
+                db = DBMaker.newFileDB(dbFile).closeOnJvmShutdown().make();
+                map = db.createTreeMap("itemStore").makeOrGet();
+            } else {
+                logger.warn("Failed to create or open the MapDB: {}", re.getMessage());
+                logger.warn("MapDB persistence service activation has failed.");
+            }
+        }
         logger.debug("MapDB persistence service is now activated");
     }
 
+    @Deactivate
     public void deactivate() {
         logger.debug("MapDB persistence service deactivated");
         if (db != null) {
             db.close();
         }
-        threadPool.shutdown();
     }
 
     @Override
     public String getId() {
-        return SERVICE_NAME;
+        return SERVICE_ID;
     }
 
     @Override
     public String getLabel(@Nullable Locale locale) {
-        return SERVICE_NAME;
+        return SERVICE_LABEL;
     }
 
     @Override
     public Set<PersistenceItemInfo> getItemInfo() {
-        return map.values().stream()
-                .map(this::deserialize)
-                .flatMap(MapDbPersistenceService::streamOptional)
-                .collect(Collectors.<PersistenceItemInfo>toSet());
+        return map.values().stream().map(this::deserialize).flatMap(MapDbPersistenceService::streamOptional)
+                .collect(Collectors.<PersistenceItemInfo> toUnmodifiableSet());
     }
 
     @Override
@@ -129,51 +168,52 @@ public class MapDbPersistenceService implements QueryablePersistenceService {
     }
 
     @Override
-    public void store(Item item, String alias) {
+    public void store(Item item, @Nullable String alias) {
         if (item.getState() instanceof UnDefType) {
             return;
         }
 
         // PersistenceManager passes SimpleItemConfiguration.alias which can be null
-        if (alias == null) {
-            alias = item.getName();
-        }
-        logger.debug("store called for {}", alias);
+        String localAlias = alias == null ? item.getName() : alias;
+        logger.debug("store called for {}", localAlias);
 
         State state = item.getState();
         MapDbItem mItem = new MapDbItem();
-        mItem.setName(alias);
+        mItem.setName(localAlias);
         mItem.setState(state);
         mItem.setTimestamp(new Date());
         String json = serialize(mItem);
-        map.put(alias, json);
+        map.put(localAlias, json);
         commit();
-        logger.debug("Stored '{}' with state '{}' in MapDB database", alias, state.toString());
+        if (logger.isDebugEnabled()) {
+            logger.debug("Stored '{}' with state '{}' as '{}' in MapDB database", localAlias, state, json);
+        }
     }
 
     @Override
     public Iterable<HistoricItem> query(FilterCriteria filter) {
         String json = map.get(filter.getItemName());
         if (json == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         Optional<MapDbItem> item = deserialize(json);
-        if (!item.isPresent()) {
-            return Collections.emptyList();
-        }
-        return Collections.singletonList(item.get());
+        return item.isPresent() ? List.of(item.get()) : List.of();
     }
 
     private String serialize(MapDbItem item) {
         return mapper.toJson(item);
     }
 
+    @SuppressWarnings("null")
     private Optional<MapDbItem> deserialize(String json) {
-        MapDbItem item = mapper.<MapDbItem>fromJson(json, MapDbItem.class);
+        MapDbItem item = mapper.<MapDbItem> fromJson(json, MapDbItem.class);
         if (item == null || !item.isValid()) {
             logger.warn("Deserialized invalid item: {}", item);
             return Optional.empty();
+        } else if (logger.isDebugEnabled()) {
+            logger.debug("Deserialized '{}' with state '{}' from '{}'", item.getName(), item.getState(), json);
         }
+
         return Optional.of(item);
     }
 
@@ -182,9 +222,11 @@ public class MapDbPersistenceService implements QueryablePersistenceService {
     }
 
     private static <T> Stream<T> streamOptional(Optional<T> opt) {
-        if (!opt.isPresent()) {
-            return Stream.empty();
-        }
-        return Stream.of(opt.get());
+        return opt.isPresent() ? Stream.of(opt.get()) : Stream.empty();
+    }
+
+    @Override
+    public List<PersistenceStrategy> getDefaultStrategies() {
+        return List.of(PersistenceStrategy.Globals.RESTORE, PersistenceStrategy.Globals.CHANGE);
     }
 }
